# Pick

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  build.sh  dependencies.repos  run.sh
docker/: Dockerfile  docker-compose.yml
ros2_ws/src/ur5e_cell_description/: CMakeLists.txt  package.xml
ros2_ws/src/ur5e_cell_description/config/: initial_positions.yaml
ros2_ws/src/ur5e_cell_description/launch/: view_cell.launch.py
ros2_ws/src/ur5e_cell_description/rviz/: view_cell.rviz
ros2_ws/src/ur5e_cell_description/urdf/: ur5e_cell.urdf.xacro  ur5e_cell_macro.xacro
ros2_ws/src/ur5e_cell_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/ur5e_cell_moveit_config/config/: hardcoded_pick_place.yaml
ros2_ws/src/ur5e_cell_moveit_config/launch/: gripper.launch.py  moveit.launch.py  rsp.launch.py  start_robot.launch.py
ros2_ws/src/ur5e_gripper_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5e_gripper_control/resource/: ur5e_gripper_control
ros2_ws/src/ur5e_gripper_control/ur5e_gripper_control/: gripper_command_server.py
ros2_ws/src/ur5e_pick_place_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5e_pick_place_bringup/config/: handeye_static.yaml  phase_b_calibration.yaml  realsense.yaml  robotiq_gripper_controllers.yaml  workspace.yaml
ros2_ws/src/ur5e_pick_place_bringup/launch/: phase_a_hardware.launch.py  phase_b_calibration.launch.py  phase_c_perception.launch.py  phase_d_grasp.launch.py  phase_e_motion.launch.py  phase_f_loop.launch.py  system_bringup.launch.py
ros2_ws/src/ur5e_pick_place_bringup/ur5e_pick_place_bringup/: aruco_marker_tf_bridge.py  gripper_command.py
ros2_ws/src/ur5e_pick_place_bringup/urdf/: robotiq_gripper_control.urdf.xacro
ros2_ws/src/ur5e_pick_place_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/ur5e_pick_place_interfaces/srv/: PickPlace.srv
ros2_ws/src/ur5e_pick_place_mtc/: CMakeLists.txt  package.xml
ros2_ws/src/ur5e_pick_place_mtc/src/: pick_place_server.cpp
ros2_ws/src/ur5e_tabletop_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5e_tabletop_perception/ur5e_tabletop_perception/: supervisor_node.py  tabletop_perception_node.py
ros2_ws/src/ur5e_workcell_description/: CMakeLists.txt  package.xml
ros2_ws/src/ur5e_workcell_description/config/: view_workcell.rviz
ros2_ws/src/ur5e_workcell_description/launch/: view_workcell.launch.py
ros2_ws/src/ur5e_workcell_description/urdf/: ur5e_workcell.urdf.xacro
tools/calibration_boards/: README.md  common.py  generate_aruco_board_pdf.py  generate_charuco_board_pdf.py
