<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_pick_place_bringup</name>
  <version>0.1.0</version>
  <description>Bringup and launch files for UR5e pick-place stack</description>
  <maintainer email="yli336@todo.todo">yli336</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>aruco_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>easy_handeye2</exec_depend>
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>gpd_ros2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>ur5e_tabletop_perception</exec_depend>
  <exec_depend>ur5e_pick_place_mtc</exec_depend>
  <exec_depend>ur5e_pick_place_interfaces</exec_depend>
  <exec_depend>ur5e_workcell_description</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
